--- a/Week_6/Day_1/exercises/05.css
+++ b/Week_6/Day_1/exercises/05.css
@@ -46,3 +46,116 @@ Make the following style changes:
         - remove the styling for the social links like above for the nav links
 
  */
+*{
+    box-sizing: border-box;
+}
+
+body {
+    background-color:#000;
+    color:#fff;
+    font-family: Helvetica;
+    font-size:16px;
+    line-height:1.5;
+}
+
+h1 {
+    font-size:32px;
+}
+
+h2 {
+    font-size:28px;
+    font-style: italic;
+}
+
+.header-statement{
+    padding:5% 10%;
+    text-align:center;
+}
+
+.page-row{
+    width:100%;
+    clear:both;
+    overflow: hidden;
+    padding:5% 5%;
+    margin-top:2%;
+    margin-bottom:2%;
+}
+.cards{
+  overflow:hidden;  
+}
+.card{
+    width:20%;
+    margin:2.5%;
+    height:300px;
+    float:left;
+}
+
+.half-width{
+    width:48%;
+    margin:1%;
+    height:500px;
+    float:right;
+}
+.hero{
+    height:800px;
+    width:100%;
+    background-size:cover;
+    background-repeat:no-repeat;
+    background-attachment:fixed;
+    background-image:url('images/magnaball.jpg');
+}
+
+.bg-red{
+    background-color: red;
+}
+.bg-orange{
+    background-color: orange;
+}
+.bg-yellow{
+    background-color: yellow;
+}
+.bg-green{
+    background-color: green;
+}
+.bg-blue{
+    background-color: blue;
+}
+.bg-purple{
+    background-color: purple;
+}
+.masthead{
+    width:100%;
+    height:100px;
+    line-height:100px;
+}
+.logo{
+    float:left;
+}
+.navbar{
+    float:right;
+}
+.nav-list .nav-link{
+    list-style-type:none;
+    display:inline;
+    padding:5px 15px;
+}
+.nav-link a {
+    color:#fff;
+    text-decoration:none;
+ }
+.footer{
+    width:100%;
+    height:100px;
+    line-height:100px;
+}
+.copyright{
+    float:left;
+}
+.social-links{
+    float:right;
+}
+.social-links a {
+    color:#fff;
+    text-decoration: none;
+    padding:5px 15px;
+}
